installed tailwind css and modified the hardhat config to include networks

--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.0",
+    "axios": "^0.27.2",
     "hardhat": "^2.9.9",
+    "ipfs-http-client": "^57.0.3",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -24,12 +29,15 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
+    "autoprefixer": "^10.4.7",
     "chai": "^4.2.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "ethers": "^5.4.7",
     "hardhat-gas-reporter": "^1.0.8",
+    "postcss": "^8.4.14",
     "solidity-coverage": "^0.7.21",
+    "tailwindcss": "^3.1.6",
     "typechain": "^8.1.0"
   }
 }
