--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "hardhat": "^2.9.9",
     "ipfs-http-client": "^57.0.3",
     "next": "12.2.2",
